vlib/v/checker/tests/non_matching_functional_args.out
vlib/v/checker/tests/non_matching_functional_args.vv:27:6: error: invalid argument 1 to `sum`: expected `fn (Table)`, not `fn (mut Table)`
   25 |
   26 | fn main() {
   27 |     sum(fn (mut t Table) {
      |         ~~~~~~~~~~~~~~~~~~
   28 |         t.rename()
   29 |         println(t.name)
details: `main.MyFn`'s expected fn argument: `zzzz` is NOT a pointer, but the passed fn argument: `t` is a pointer
vlib/v/checker/tests/non_matching_functional_args.vv:31:6: error: invalid argument 1 to `sum`: expected `fn (Table)`, not `fn (mut Table)`
   29 |         println(t.name)
   30 |     })
   31 |     sum(xxx)
      |         ~~~
   32 |     sum(yyy)
   33 | }
details: `main.MyFn`'s expected fn argument: `zzzz` is NOT a pointer, but the passed fn argument: `mytable` is a pointer